--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 <a href="piezasmascarahtml/pieza_mascara31.html"><img src="mis_fotos/mascaras/mascara31.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
 <a href="piezasmascarahtml/pieza_mascara32.html"><img src="mis_fotos/mascaras/mascara32.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
 <a href="piezasmascarahtml/pieza_mascara33.html"><img src="mis_fotos/mascaras/mascara33.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
-
+<a href="piezasmascarahtml/pieza_mascara34.html"><img src="mis_fotos/mascaras/mascara34.jpg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
 
 
 
