--- a/piezassastrehtml/pieza_sastre_9.html
+++ b/piezassastrehtml/pieza_sastre_9.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pieza cajon de sastre 7</title>
+  <title>Pieza cajon de sastre 8</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Lightbox CSS y JS simple -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/glightbox/3.2.0/css/glightbox.min.css" integrity="sha512-+KPZs1BTSa6l5vIk91jGJ6dW9UgVSpvGx1Xr2N7m9UTh3f97k2XoZTz2r6H5hVxZx52r6hPSNnD6bk6XkWPMig==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -19,29 +19,23 @@
 
       <!-- Imagen principal a la izquierda con marco decorativo y efecto hover -->
       <div class="md:w-1/2 flex justify-center transition-transform transform hover:scale-105">
-        <a href="../mis_fotos/sastre/sastre7.jpeg" class="glightbox">
-          <img src="../mis_fotos/sastre/sastre7.jpeg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza cajon de sastre foto 7" />
+        <a href="../mis_fotos/sastre/sastre9.jpeg" class="glightbox">
+          <img src="../mis_fotos/sastre/sastre9.jpeg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza cajon de sastre foto 9" />
         </a>
       </div>
 
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Ceramica Mangbetu</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;">
-          Los Mangbetu viven en el noreste del antiguo Zaire (actual R. D. Congo), en la cuenca del Uele / Ubangi.
-        </p>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;">
-          Su arte cerámico / de barro tuvo un periodo destacado, especialmente entre fines del siglo XIX y principios del XX
-        </p>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;">
-          Producían vasijas, jarras y recipientes de cerámica (“pots / jars”) que muchas veces tenían formas antropomorfas (cabezas humanas, siluetas alargadas) o decoraciones elaboradas
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200">
+          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Cerámica</li>
-          <li><strong>Origen:</strong> Zaire</li>
-          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
+          <li><strong>Material:</strong> Bronce</li>
+          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
+          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
         </ul>
       </div>
 
@@ -50,8 +44,8 @@
     <!-- Galería adicional con lightbox -->
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
-      <a href="../mis_fotos/sastre/sastre7_1.jpeg" class="glightbox"><img src="../mis_fotos/sastre/sastre7_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza cajón de sastre foto 7" /></a>
-      <a href="../mis_fotos/sastre/sastre7_2.jpeg" class="glightbox"><img src="../mis_fotos/sastre/sastre7_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza cajón de sastre foto 7" /></a>
+      <a href="../mis_fotos/sastre/sastre9_1.jpeg" class="glightbox"><img src="../mis_fotos/sastre/sastre9_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza cajón de sastre foto 8" /></a>
+      <a href="../mis_fotos/sastre/sastre9_2.jpeg" class="glightbox"><img src="../mis_fotos/sastre/sastre9_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza cajón de sastre foto 8" /></a>
     </div>
 
     <!-- Botón de volver -->
