--- a/piezasbroncehtml/pieza_bronce12.html
+++ b/piezasbroncehtml/pieza_bronce12.html
@@ -27,15 +27,32 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Escultura Kota / Bakota</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify" >
+         La pieza es una interpretación moderna inspirada en el estilo Bakota.
         </p>
+       
+        <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify" >
+          El término “Kota” o “Bakota” se refiere al mismo grupo étnico: los Kota, también conocidos como Bakota, que habitan principalmente en Gabón y partes del Congo. Son famosos por sus esculturas de metal, especialmente los reliquarios conocidos como mbulu-ngulu.
+
+Función ritual: Los mbulu-ngulu eran guardianes de reliquias funerarias, colocados sobre cajas que contenían restos de ancestros.
+
+Estilo abstracto:
+
+Rostros planos o convexos con ojos grandes y nariz triangular.
+
+Tocados elaborados con formas geométricas.
+
+Cuerpos reducidos o ausentes, a veces con formas de diamante o abanico.
+
+Simbolismo: Representan protección espiritual, conexión con los ancestros y autoridad tribal.
+        </p>
+       
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
           <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Origen:</strong> Camerún</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
