--- a/piezasbroncehtml/pieza_bronce6.html
+++ b/piezasbroncehtml/pieza_bronce6.html
@@ -29,7 +29,7 @@
         <!-- Nombre de la pieza como encabezamiento -->
         <h2 class="text-3xl font-bold mb-4 text-gray-200">Cabeza bronce Ife</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;">
-          Ile‑Ifẹ es una ciudad tradicional del pueblo Yoruba, en el suroeste de Nigeria — considerado el centro espiritual e histórico de los Yoruba. 
+          Ile-Ifẹ es una ciudad tradicional del pueblo Yoruba, en el suroeste de Nigeria — considerado el centro espiritual e histórico de los Yoruba. 
 
 
 Según la tradición Yoruba, Ife es la “cuna de la humanidad” y el lugar donde la civilización Yoruba — y en sentido simbólico, el mundo — comenzó.
