--- a/piezasbroncehtml/pieza_bronce10.html
+++ b/piezasbroncehtml/pieza_bronce10.html
@@ -27,15 +27,20 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua Ife</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+         Las estatuas Ife provienen de la antigua ciudad de Ife, en lo que hoy es Nigeria, cuna de la civilización yoruba. Son famosas por su realismo y detalle, especialmente en las esculturas de cabezas y figuras humanas.
         </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+         Las estatuas Ife de bronce representan principalmente a personas de alto rango en la sociedad yoruba, especialmente reyes (Oba), miembros de la realeza y nobles, más que dioses o figuras mitológicas. Su propósito no era solo decorativo, sino ritual y político, reforzando la autoridad y legitimidad del gobernante.
+        </p>
+
+
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
           <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Origen:</strong> Nigeria</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
