--- a/piezascascohtml/pieza_casco6.html
+++ b/piezascascohtml/pieza_casco6.html
@@ -27,15 +27,45 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Casco-Máscara Igbo</h2>
+
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          En la cultura Igbo, un casco no es un casco militar, sino una máscara grande que cubre toda la cabeza, tallada en madera y decorada con colores, peinados, cuernos o formas simbólicas.
+
+          Se utilizan en:
+
+          ritos de iniciación,
+
+          funerales de personas importantes,
+
+          festivales agrícolas,
+
+          danzas de entretenimiento o prestigio,
+
+          sociedades secretas (como Ekpe, Odo, Mmo)
         </p>
+
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+         En particular las máscaras de la Sociedad Ekpe / Ngbe
+
+          eran usadas por sociedades de hombres con funciones judiciales y de orden social.
+          Los cascos suelen tener:
+
+          líneas geométricas,
+
+colores fuertes,
+
+motivos felinos o poderosos,
+
+Representan autoridad y protección de la comunidad.
+        </p>
+        
+
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Sureste de Nigeria</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
