--- a/piezasestatuahtml/pieza_estatua22.html
+++ b/piezasestatuahtml/pieza_estatua22.html
@@ -27,16 +27,37 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua 1 del siglo XX a.d.c.</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Fetiche Ibibio</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;">
+        Los Ibibio son uno de los pueblos más antiguos del sureste de Nigeria, principalmente en el estado de Akwa Ibom y partes de Cross River.
+Son conocidos por:
+
+Su lengua ibibio, parte de la familia niger-congo.
+
+Su cultura rica en máscaras, sociedades secretas y tradiciones orales.
+
+Su sistema tradicional de gobierno y roles comunitarios.
         </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;">
+        Los Ibibio utilizan objetos consagrados que se cree que:
+
+        Protegen al individuo o a la comunidad;
+
+Alejan el mal;
+
+Traen buena fortuna;
+
+Sirven como medios de comunicación espiritual
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;">
+        En los ritos ofrecían sacrificios cuyos restos como leche de vaca y sangre de pollo aparecen en la figura
+        </p>
+        
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
-        </ul>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Nigeria</li>
+        </ul>  
       </div>
 
     </div>
