--- a/piezasestatuahtml/pieza_estatua24.html
+++ b/piezasestatuahtml/pieza_estatua24.html
@@ -27,9 +27,30 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua 1 del siglo XX a.d.c.</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua Punu</h2>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+         La figura representa una mujer de pie, tallada en madera con gran detalle y expresividad. Se apoya sobre una base circular, lo que le da estabilidad y presencia. Su postura es erguida y digna, con los brazos ligeramente flexionados y el derecho sosteniendo un objeto que parece ser un bastón, lanza o símbolo de autoridad.
+
+Rasgos físicos y ornamentales:
+
+Peinado alto y elaborado, posiblemente trenzado o esculpido en forma de tocado ritual.
+
+Cuello alargado con anillos, símbolo de elegancia y estatus.
+
+Rostro expresivo, con ojos prominentes, nariz recta y labios llenos.
+
+Adornos corporales: brazaletes en muñecas y tobillos, collar, y una especie de cinturón o faldón decorativo.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+         La figura podría representar:
+
+Una sacerdotisa o mujer de alto rango.
+
+Un espíritu protector femenino.
+
+Un símbolo de fertilidad, autoridad o sabiduría ancestral.
+
+Este tipo de escultura no solo es una obra de arte, sino también un objeto cargado de significado espiritual y social dentro de la cosmovisión Punu.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
