--- a/piezasestatuahtml/pieza_estatua13.html
+++ b/piezasestatuahtml/pieza_estatua13.html
@@ -27,15 +27,36 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua 1 del siglo XX a.d.c.</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Figuras Ibeji de la cultura yoruba, talladas en madera.</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+        Muñecas rituales Ibeji, representando gemelos.
+
+La figura de la izquierda es masculina (con pene tallado), y la de la derecha es femenina (con senos tallados).
+
+Las proporciones alargadas y la estilización de la cabeza son típicas del arte yoruba: enfatizan el orí, que representa la cabeza espiritual o destino de la persona.
         </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Detalles simbólicos
+
+Marcas en la cara y pecho: son tatuajes rituales o cicatrices ceremoniales, que indican estatus o identidad espiritual.
+
+Collares de cuentas:
+
+
+
+Los colores y cuentas son elementos protectores y rituales, ligados a la fertilidad y la protección espiritual de la familia.
+
+Postura: ambos están de pie, con manos a los lados, típica en Ibeji, simbolizando presencia espiritual y estabilidad.
+
+Zapatos o pies exagerados: en algunas tradiciones yoruba, se enfatiza la base o los pies para representar la conexión con la tierra y la fuerza vital.
+        </p>
+
+
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Tamaño:</strong> 20 cm de alto</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Región Yoruba</li>
+         <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>--!
         </ul>
       </div>
 
