--- a/piezasmascarahtml/pieza_mascara10.html
+++ b/piezasmascarahtml/pieza_mascara10.html
@@ -27,15 +27,30 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">MASCARA 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Máscara Punu</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Máscara africana tradicional del estilo Punu. Características:
+
+Rasgos faciales delicados y estilizados: Los ojos alargados y entrecerrados, la boca pequeña y los pómulos suaves son típicos de máscaras Punu de Gabón.
+
+Uso de colores claros y oscuros: La combinación de blanco (a menudo kaolín) y negro es característica de muchas máscaras ceremoniales africanas.
+
+Peinado alto y geométrico: El tocado o peinado alto y detallado es un elemento frecuente en máscaras de las etnias Punu y Chokwe.
+
+Diseño simbólico en la frente y las mejillas: Los motivos geométricos en la frente y las mejillas suelen tener un significado espiritual o social, asociado con la belleza y la sabiduría.
+
+En general, esta máscara probablemente proviene de Gabón o la región del Congo, y era utilizada en ceremonias de danza, rituales de iniciación o festivales relacionados con los ancestros.
         </p>
+
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          
+        </p>
+      
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Gabón</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
