--- a/piezasmascarahtml/pieza_mascara14.html
+++ b/piezasmascarahtml/pieza_mascara14.html
@@ -20,17 +20,32 @@
       <!-- Imagen principal a la izquierda con marco decorativo y efecto hover -->
       <div class="md:w-1/2 flex justify-center transition-transform transform hover:scale-105">
         <a href="../mis_fotos/mascaras/mascara14.jpeg" class="glightbox">
-          <img src="../mis_fotos/mascaras/mascara14.jpeg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza mascara foto 14" />
+          <img src="../mis_fotos/mascaras/mascara14.jpeg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza mascara foto 10" />
         </a>
       </div>
 
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Mascara Punu.-</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Las máscaras africanas blancas de Gabón estaban asociadas a diferentes grupos secretos. La máscara, evocación de una joven mujer muerta era exhibida durante la representacion de una danza llamada Okuyi
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Máscara Punu</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Máscara africana tradicional del estilo Punu. Características:
+
+Rasgos faciales delicados y estilizados: Los ojos alargados y entrecerrados, la boca pequeña y los pómulos suaves son típicos de máscaras Punu de Gabón.
+
+Uso de colores claros y oscuros: La combinación de blanco (a menudo kaolín) y negro es característica de muchas máscaras ceremoniales africanas.
+
+Peinado alto y geométrico: El tocado o peinado alto y detallado es un elemento frecuente en máscaras de las etnias Punu y Chokwe.
+
+Diseño simbólico en la frente y las mejillas: Los motivos geométricos en la frente y las mejillas suelen tener un significado espiritual o social, asociado con la belleza y la sabiduría.
+
+En general, esta máscara probablemente proviene de Gabón o la región del Congo, y era utilizada en ceremonias de danza, rituales de iniciación o festivales relacionados con los ancestros.
         </p>
+
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          
+        </p>
+      
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
           <li><strong>Material:</strong> Madera</li>
@@ -44,7 +59,7 @@
     <!-- Galería adicional con lightbox -->
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
-      <a href="../mis_fotos/mascaras/mascara14_1.jpeg" class="glightbox"><img src="../mis_fotos/mascaras/mascara14_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza mascara foto 14" /></a>
+      <a href="../mis_fotos/mascaras/mascara14_1.jpeg" class="glightbox"><img src="mis_fotos/mascaras/mascara14_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza mascara foto 10" /></a>
       <a href="mis_fotos/bronces/bronce14_2.jpeg" class="glightbox"><img src="mis_fotos/bronces/bronce14_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
     </div>
 
