--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Esculturas de Arte Africano</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-neutral-100 text-neutral-900">
+<body class="bg-neutral-100 text-neutral-900"; style="background-color: rgb(227, 227, 214);">
   <!-- Header -->
   <header class="bg-neutral-900 text-white py-6 shadow-lg">
     <h1 class="text-center text-3xl font-bold tracking-wide uppercase">Esculturas de Arte Africano</h1>
@@ -49,6 +49,7 @@
       <a href="piezasbroncehtml/pieza_bronce16.html"><img src="mis_fotos/bronces/bronce16.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
       <a href="piezasbroncehtml/pieza_bronce17.html"><img src="mis_fotos/bronces/bronce17.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
       <a href="piezasbroncehtml/pieza_bronce18.html"><img src="mis_fotos/bronces/bronce18.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
+      <a href="piezasbroncehtml/pieza_bronce19.html"><img src="mis_fotos/bronces/bronce19.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
       <a href="piezasbroncehtml/pieza_bronce20.html"><img src="mis_fotos/bronces/bronce20.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
                
             
