--- a/piezassastrehtml/pieza_sastre_9.html
+++ b/piezassastrehtml/pieza_sastre_9.html
@@ -27,15 +27,28 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Silla Bamun</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+        Las sillas Bamun son piezas tradicionales del Reino Bamun, ubicado en la región occidental de Camerún, famoso por su arte cortesano y su producción escultórica altamente elaborada.
+
+Estas sillas no son muebles comunes: son objetos de estatus, usados por reyes (Fon), nobles o jefes importantes del reino.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+         Las sillas Bamun suelen mostrar:
+
+Figuras antropomorfas: guardianes, ancestros, reyes.
+
+Animales simbólicos: serpientes, arañas, lagartos (representan poder, sabiduría o protección).
+
+Motivos geométricos reales: símbolos vinculados a la realeza Bamun.
+
+Cada elemento tallado refuerza el estatus del propietario.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Tamaño:</strong> 55 cm de alto</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Camerún</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
