--- a/piezasbroncehtml/pieza_bronce20.html
+++ b/piezasbroncehtml/pieza_bronce20.html
@@ -27,15 +27,34 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Figura Ife bronce </h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          La figura representa a un personaje de pie, posiblemente un rey o sacerdote, fundido en bronce o aleación metálica. Está ricamente adornado y transmite autoridad:
+
+Tocado alto y ornamentado: Similar a las coronas reales yoruba, con forma cónica o puntiaguda.
+
+Collar de cuentas: Elemento distintivo de la nobleza Ife.
+
+Vestimenta ceremonial: Incluye una falda decorada y detalles en relieve que sugieren textiles o armaduras rituales.
+
+Objetos en ambas manos: Un cetro o bastón de mando en una mano, y un cuerno o símbolo ritual en la otra.
+
+Pedestal cuadrado: Con patrón entrecruzado, típico de bases ceremoniales.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Realismo refinado: Las esculturas Ife son famosas por su naturalismo, proporciones humanas precisas y detalles anatómicos.
+
+Técnica de cera perdida: Usada para fundir bronce y latón con gran precisión.
+
+
+
+Simbolismo: Las figuras representan realeza, divinidad y conexión espiritual con los ancestros.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
           <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Origen:</strong> Benin / Nigeria</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
