--- a/piezasbroncehtml/pieza_bronce7.html
+++ b/piezasbroncehtml/pieza_bronce7.html
@@ -27,15 +27,30 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Pieza bronce Baulé</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Los Baulé, parte del grupo Akan, son conocidos por su arte refinado. En metal, suelen representar:
+
+Músicos o danzantes: Figuras que celebran la vida, la fertilidad o el vínculo con los ancestros.
+
+Escenas cotidianas estilizadas: Con cuerpos alargados y gestos simbólicos.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Figura alargada y abstracta: Rasgos exagerados, especialmente en extremidades y rostro, típicos del estilo Akan.
+
+Instrumento musical (tambor): Elemento central que puede simbolizar comunicación con los espíritus o celebración ritual.
+
+Motivos decorativos en el tambor: Animales y cuerdas, posiblemente con carga simbólica o estética.
+
+Técnica de fundición: Probablemente cire perdue (a la cera perdida), tradicional en África occidental.
+
+Base plana: Indica que la pieza está pensada para exhibición, no para uso ritual directo.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
+          <li><strong>Tamaño:</strong> 15 cm de alto</li>
           <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Origen:</strong> Costa de Marfil</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
