--- a/piezasbroncehtml/pieza_bronce8.html
+++ b/piezasbroncehtml/pieza_bronce8.html
@@ -27,15 +27,28 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Caballo bronce Lobi</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify"> 
+         Figura de caballo estilizado: Cuerpo alargado, patas rígidas, proporciones abstractas.
+
+Recipiente ritual sobre el lomo: Con tapa decorada por una miniatura de caballo, posiblemente usado para contener polvos, semillas o reliquias.
+
+Motivos decorativos en relieve: Cuerdas, animales y patrones geométricos que refuerzan el carácter ceremonial.
+
+Base plana: Pensada para exhibición en altares o espacios rituales.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify"> 
+         Símbolo de poder y movilidad espiritual: El caballo es asociado a jefes, ancestros y espíritus protectores.
+
+Contenedor de fuerza ritual: El recipiente puede guardar elementos sagrados usados en prácticas de protección o memoria.
+
+Objeto de prestigio: Propiedad de figuras de autoridad o ancianos, usado en contextos de transmisión de linaje.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
+          <li><strong>Tamaño:</strong> 15 cm de alto</li>
           <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Origen:</strong>Burkina Faso</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
