--- a/piezascascohtml/pieza_casco2.html
+++ b/piezascascohtml/pieza_casco2.html
@@ -27,15 +27,28 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Casco Nieré</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+        Máscara casco de cobertura completa
+
+Cresta vertical: Alta, simétrica, con forma estilizada de plumas o hojas.
+
+Motivos geométricos: Triángulos, círculos y líneas talladas y pintadas.
+
+Coloración: Tonos terrosos que refuerzan el carácter ritual.
+
+Base perforada: Orificios para fijación al traje ceremonial.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+         La cresta vertical simboliza la conexión entre el mundo terrenal y el espiritual. Los patrones geométricos representan orden cósmico, jerarquía social y escarificaciones rituales. El uso de pigmentos naturales refuerza la autenticidad y el vínculo con la tierra.
+
+El casco Nieré es una manifestación de poder espiritual y estética simbólica. Su diseño sugiere una función activa en rituales de transformación, donde el individuo se convierte en símbolo colectivo. Esta pieza destaca por su equilibrio entre geometría, verticalidad y expresividad ritual, siendo un testimonio de la riqueza artística del África occidental.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Tamaño:</strong> 70 cm de alto</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> : Región del Alto Níger (posiblemente Mali, Guinea o Burkina Faso)</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
