--- a/piezasestatuahtml/pieza_estatua11.html
+++ b/piezasestatuahtml/pieza_estatua11.html
@@ -27,15 +27,18 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua 1 del siglo XX a.d.c.</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Figura sentada</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+         Cultura Chokwe (Angola, Congo, Zambia), con posibles reinterpretaciones contemporáneas inspiradas en el arte tribal africano.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+         La escultura representa a un ser humano en posición sentada o agazapada, con los brazos apoyados sobre las rodillas. El rostro muestra rasgos estilizados: nariz prominente, ojos cerrados y boca discreta, transmitiendo serenidad y recogimiento. El cabello o tocado está trabajado con textura detallada. Un aro dorado en la oreja izquierda aporta contraste y simbolismo. La superficie pulida de la madera confiere un acabado refinado y solemne.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Tamaño:</strong> 60 cm </li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Centro Africa</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
