--- a/piezasestatuahtml/pieza_estatua3.html
+++ b/piezasestatuahtml/pieza_estatua3.html
@@ -27,15 +27,32 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua 1 del siglo XX a.d.c.</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua maternité Yoruba</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Los Yoruba son conocidos por su rica tradición escultórica, especialmente en madera, donde la figura materna ocupa un lugar central. Estas esculturas suelen representar:
+
+Mujeres sentadas con niños en brazos o a la espalda
+
+Rostros serenos y simétricos
+
+Gestos rituales, como ofrecer un cuenco, símbolo de nutrición o sacrificio
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Postura sentada: Denota estabilidad, autoridad y reverencia.
+
+Cuenco en las manos: Puede representar ofrenda, sabiduría o alimento espiritual.
+
+Niño en la espalda: Iconografía clásica de la maternidad africana, enfatizando el rol protector y reproductivo.
+
+Detalles faciales y tocado: El cuidado en la talla del rostro y el peinado refleja el ideal de belleza y dignidad femenina Yoruba.
+
+Patina rojiza: Indica uso ritual y antigüedad, posiblemente por manipulación en contextos ceremoniales.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Tamaño:</strong> 40 cm de alto</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Región Yoruba, Nigeria</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
