--- a/piezasestatuahtml/pieza_estatua29.html
+++ b/piezasestatuahtml/pieza_estatua29.html
@@ -27,15 +27,26 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua 1 del siglo XX a.d.c.</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua doble cara Ibo</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Los Igbo son conocidos por su arte escultórico en madera, especialmente en contextos rituales. Las figuras de doble cara o janiformes aparecen en altares dedicados a Ikenga, una deidad asociada al poder personal, la realización y la fuerza masculina. También pueden representar guardianes espirituales o principios duales como día/noche, masculino/femenino, vida/muerte.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Dos cabezas opuestas: Simbolizan vigilancia en todas direcciones, omnipresencia espiritual o equilibrio entre fuerzas complementarias.
+
+Postura en cuclillas: Común en figuras de poder, denota preparación, tensión ritual o conexión con la tierra.
+
+Motivos geométricos: Tallados en torso y extremidades, pueden representar escarificaciones, jerarquías o códigos simbólicos.
+
+Peinados o tocados elaborados: Indican estatus, identidad ritual o conexión con ancestros.
+
+
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Nigeria</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
