--- a/piezasestatuahtml/pieza_estatua9.html
+++ b/piezasestatuahtml/pieza_estatua9.html
@@ -27,15 +27,34 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua 1 del siglo XX a.d.c.</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Maternité Bakongo</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Figura sentada con niño en brazos: Posición clásica que enfatiza el acto de nutrir y proteger. El niño en el pecho sugiere lactancia, vínculo directo con la vida.
+
+Rostro estilizado: Ojos almendrados, nariz recta, labios definidos. Rasgos idealizados que evocan dignidad y belleza espiritual.
+
+Peinado alto o cresta: Elemento frecuente en esculturas Bakongo, símbolo de estatus o conexión ritual.
+
+Brazaletes y adornos: Indican nobleza, poder o pertenencia a linajes importantes.
+
+
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Estas esculturas no son simples retratos: son vehículos de poder espiritual. Se colocan en altares domésticos o comunitarios, y pueden representar:
+
+Ancestros femeninos venerados por su sabiduría y fertilidad.
+
+Espíritus protectores que cuidan el linaje familiar.
+
+Figuras de autoridad ritual, como sacerdotisas o madres fundadoras.
+
+El niño no solo representa descendencia, sino también transmisión de conocimiento espiritual.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Tamaño:</strong> 50 cm de alto</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> República del Congo, Angola, RDC</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
