--- a/piezasmascarahtml/pieza_mascara16.html
+++ b/piezasmascarahtml/pieza_mascara16.html
@@ -27,15 +27,26 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">MASCARA 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Mascara Idoma</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify" >
+          El pueblo Idoma utiliza máscaras en ceremonias vinculadas al culto de los espíritus del agua (Anjenu) y en rituales funerarios.
+
+Función:
+
+Honrar a los ancestros y guiar el tránsito de las almas.
+
+Participar en danzas públicas con fuerte carga simbólica.
+
+Simbolismo del blanco: Asociado a la muerte, lo sobrenatural y la pureza espiritual.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify" >
+          Esta máscara encarna la relación entre los vivos y los muertos en la cosmovisión Idoma. Su serenidad facial transmite la idea de equilibrio entre el mundo terrenal y el espiritual. Aunque algunas máscaras Idoma muestran expresiones más agresivas (dientes expuestos), esta variante enfatiza la calma y la solemnidad, lo que sugiere un uso específico en rituales de carácter conmemorativo.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Tamaño:</strong> 20 cm de alto</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Nigeria, región del río Benue</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
