--- a/piezasmascarahtml/pieza_mascara18.html
+++ b/piezasmascarahtml/pieza_mascara18.html
@@ -27,16 +27,32 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">MASCARA 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Máscara Fang</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Los Fang son conocidos por sus máscaras estilizadas, de formas alargadas, colores contrastantes y fuerte carga espiritual. Estas máscaras se utilizan en rituales de justicia, iniciación y protección espiritual, especialmente en el contexto del culto Byeri, que honra a los ancestros.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Rostro alargado y simétrico: Típico del estilo Fang, que busca representar la idealización del rostro humano.
+
+Nariz prominente y recta: Elemento central en la estética Fang.
+
+Ojos y boca circulares, pequeños: Transmiten serenidad y vigilancia espiritual.
+
+Colores blanco, marrón:
+
+Blanco: espiritualidad, mundo de los ancestros.
+
+Marrón: conexión con la tierra.
+
+
+
+Elemento superior tallado: Puede representar un tocado ritual o estilización capilar.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
-        </ul>
+          <li><strong>Tamaño:</strong> 40 cm de alto</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Gabón</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
       </div>
 
     </div>
