--- a/piezasmascarahtml/pieza_mascara22.html
+++ b/piezasmascarahtml/pieza_mascara22.html
@@ -27,15 +27,24 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">MASCARA 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Máscara Bambara</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+         Las máscaras Bambara se utilizan en contextos rituales para representar fuerzas espirituales, animales míticos o principios morales. Esta pieza parece pertenecer a una tipología antropomorfa estilizada, posiblemente vinculada a la sociedad Koré, que emplea máscaras humanas para enseñar sabiduría y autocontrol.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+         Dependiendo del contexto, esta máscara podría haber sido usada en:
+
+Sociedad Koré: Enseñanza moral, autocontrol, sabiduría ancestral.
+
+Ritos de iniciación masculina: Donde el portador representa un espíritu guía.
+
+Ceremonias de justicia o reconciliación: El portador actúa como mediador entre el mundo humano y el espiritual.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Mali</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
