--- a/piezasmascarahtml/pieza_mascara23.html
+++ b/piezasmascarahtml/pieza_mascara23.html
@@ -27,15 +27,32 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">MASCARA 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Máscara Idoma</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Los Idoma son conocidos por sus máscaras rituales utilizadas en contextos funerarios, festividades y ceremonias de culto al espíritu del agua Anjenu. Estas máscaras suelen tener una estética poderosa, con rasgos exagerados o estilizados que transmiten fuerza espiritual.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Forma alargada y simétrica: Típica de las máscaras Idoma, que buscan representar una figura espiritual idealizada.
+
+Nariz prominente y recta: Elemento central en la estética ritual.
+
+Ojos y boca circulares, pequeños: Transmiten serenidad, vigilancia o introspección espiritual.
+
+Pigmentación blanca y marrón:
+
+Blanco: símbolo de lo espiritual, lo funerario y lo femenino.
+
+Marrón oscuro: conexión con la tierra y la ancestralidad.
+
+Textura desgastada: Indica uso ritual o antigüedad, reforzando su autenticidad.
+
+Elemento superior tallado: Puede representar un tocado ritual o estilización capilar, común en máscaras de prestigio.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Nigeria, región del río Benue</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
