--- a/piezasmascarahtml/pieza_mascara24.html
+++ b/piezasmascarahtml/pieza_mascara24.html
@@ -27,15 +27,26 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">MASCARA 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Máscara Bangwa</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Estas máscaras se utilizan en:
+
+Ritos funerarios: Para honrar a figuras importantes del clan.
+
+Danzas de linaje: Donde se representa la historia ancestral del grupo.
+
+Ceremonias de poder: El portador puede encarnar un espíritu protector o un antepasado.
+
+En el caso de los Bangwa, las máscaras suelen tener rasgos exagerados (ojos saltones, mejillas infladas) y se combinan con trajes de fibras para ocultar completamente al danzante
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          El arte de las Grassfields camerunesas es profundamente simbólico. Las máscaras no solo representan espíritus, sino también jerarquías sociales, genealogías y valores comunitarios. El uso de materiales naturales refuerza el vínculo con la tierra y con los ciclos vitales.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
           <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Origen:</strong> Región Grassfields, Camerún</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
